Fix BTreeSignal NPE: guard empty tree in getRasterView
NullPointerException in BTreeRasterView when tree.size()==0:
tree.getKeyFromOrd() returns null for empty BTree, causing
t1_.doubleValue() NPE at line 147.

Fix: early return with default values when tree is empty.
Also null-guard t0_/t1_ after getKeyFromOrd() calls.
Also replaced deprecated new Double() with Double.valueOf().

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>